--- a/Integration of Mergesort and Insertion Sort/Integration of Mergesort and Insertion Sort.vcxproj
+++ b/Integration of Mergesort and Insertion Sort/Integration of Mergesort and Insertion Sort.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.c" />
+    <ClCompile Include="Test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
