--- a/Integration of Mergesort and Insertion Sort/Integration of Mergesort and Insertion Sort.vcxproj
+++ b/Integration of Mergesort and Insertion Sort/Integration of Mergesort and Insertion Sort.vcxproj
@@ -142,8 +142,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="LinkedList.c" />
     <ClCompile Include="Main.c" />
+    <ClCompile Include="Queue.c" />
+    <ClCompile Include="Stack.c" />
     <ClCompile Include="Test.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Queue.h" />
+    <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
