GUI, modified MergeSort not sorting properly, original MergeSort and InsertionSort sorting properly

--- a/Integration of Mergesort and Insertion Sort/Integration of Mergesort and Insertion Sort.vcxproj
+++ b/Integration of Mergesort and Insertion Sort/Integration of Mergesort and Insertion Sort.vcxproj
@@ -146,11 +146,11 @@
     <ClCompile Include="Main.c" />
     <ClCompile Include="Queue.c" />
     <ClCompile Include="Stack.c" />
-    <ClCompile Include="Test.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Queue.h" />
+    <ClInclude Include="Sort.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
